Revert "Merge branch 'master' of https://github.com/MUTOR-2/MUTOR"
This reverts commit f63e85c2fe65d6ea18d62741076872724363b603, reversing
changes made to 706fe318f803136e43972fee73921a97dc7e935e.

--- a/_units/05.md
+++ b/_units/05.md
@@ -1,6 +1,6 @@
 ---
 ###
-# unit information:
+# unit information: 
 # Unit 5: Pitch, Intervals and Key Areas
 ###
 title: Pitch, Intervals and Key Areas
@@ -9,13 +9,13 @@ short_description: short description of the unit
 summary: Pitch is one of the most important attributes of music. This unit will cover the different types of pitch we may perceive in music. We start with the relationship between frequency in the physical world and pitch in the perceptual world. We continue to discuss the cases when pitch may occur in the absence of energy at the perceived frequency, and propose models which may account for this perceptual phenomenon. Different types of pitch perception will be discussed, including the qualities that makes it form transposable melodies and harmonies. Finally, we will discuss pitch spaces that enable the systematic use of pitch as a musical medium.
 authors:
  - Georg Hajdu
- - Psyche Loui
+ - Psyche Loui 
 topics: [Pitch, Interval, Theory of Pitch Perception, Tonality, Key Area]
 test_questions:
  - Calculate the sizes of following intervals.  Pythagorean major third (81/64),  septimal minor seventh (7/4) and undecimal augmented fourth (11/8). Determine how much they deviate from their equal-tempered counterparts.
 
  - The calculation of virtual pitch was attributed to cubic difference tones  in past which, strikingly, yield similar results. Explain why the brain will most likely still use a different method and give an example where difference tones and virtual pitch differ.
-
+ 
  - Discuss to what extent the tonality profiles derived by the probe tone method point to universal musical principles or whether it's rather cultural influences that determine the perception of tonal hierachies.
 
 ###
@@ -40,19 +40,19 @@ Pitch is thought of as a morphophoric, or form-bearing, medium. This means that 
 
 ## Frequency and Pitch
 
-Pitch is perceived in sounds that are periodic; i.e. sounds with features which recur at regular frequencies. Aperiodic sounds are more likely to be perceived not as pitches, but as noise or transient (quickly-changing) clicks. Thus, pitch perception depends on frequencies of sounds entering the ears.
+Pitch is perceived in sounds that are periodic; i.e. sounds with features which recur at regular frequencies. Aperiodic sounds are more likely to be perceived not as pitches, but as noise or transient (quickly-changing) clicks. Thus, pitch perception depends on frequencies of sounds entering the ears. 
 
-The orchestra tunes to the pitch of concert A4, which usually corresponds to sounds with the fundamental frequency of 440Hz. This means that while energy of sound waves may be at 440Hz or above, we perceive sounds to be equivalent in pitch as a pure tone at 440Hz.
+The orchestra tunes to the pitch of concert A4, which usually corresponds to sounds with the fundamental frequency of 440Hz. This means that while energy of sound waves may be at 440Hz or above, we perceive sounds to be equivalent in pitch as a pure tone at 440Hz. 
 
 Our percept of pitch is **logarithmically organized** such that an octave above concert A is twice its frequency, therefore, 880Hz; whereas the next octave above 880Hz is twice 880Hz, which is 1760Hz. Thus each octave corresponds to a doubling in frequency, resulting in a logarithmic function relating frequency to pitch.
 
-{% include img-figure url="/MUTOR/assets/images/PitchVsFrequency.jpg" description="Pitch vs. Frequency" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/PitchVsFrequency.jpg" description="Pitch vs. Frequency" %}
 
 ## Fundamental Frequency
 
-The percept of pitch generally correlates with the fundamental frequency of sound waves. The fundamental frequency is defined as the highest common factor of all sound waves from the same source, which gives rise to the pitch percept.
+The percept of pitch generally correlates with the fundamental frequency of sound waves. The fundamental frequency is defined as the highest common factor of all sound waves from the same source, which gives rise to the pitch percept. 
 
-As an illustration of fundamental frequency and its relationship with pitch, consider four tones, each with different numbers of components, but where all the components are integer multiples of 440Hz. The perceived pitch of these four tones should be the same, although the frequencies which comprise them are different. The higher components in frequencies of n times 440Hz do not change the perceived pitch, but they do influence the percept of timbre.
+As an illustration of fundamental frequency and its relationship with pitch, consider four tones, each with different numbers of components, but where all the components are integer multiples of 440Hz. The perceived pitch of these four tones should be the same, although the frequencies which comprise them are different. The higher components in frequencies of n times 440Hz do not change the perceived pitch, but they do influence the percept of timbre. 
 
 The following are four tones with differing numbers of partials, but with the same fundamental frequency and thus the same perceived pitch.
 
@@ -86,7 +86,7 @@ Your browser does not support the audio element.
 Your browser does not support the audio element.
 </audio>
 </div>
-
+  
 The fundamental frequency of a sound is also known as its periodicity pitch, and is shorthanded as F0.
 
 ## Virtual Pitch
@@ -105,9 +105,9 @@ Virtual pitch is only perceived if the missing fundamental frequency lies within
       Your browser does not support the video element.
     </video>
    </div>
-
-Virtual pitch demonstrations (from ASA demonstration CD):
-Spectral and virtual pitch: you will hear the tune of Westminster chimes presented in virtual pitch, due to the configuration of spectral components harmonically related to the missing fundamental. The spectral and virtual pitches will each be masked in the second and third clips. The video features _autocorrelograms_ of the auditory signal (see below for an explanation). (Videos from `[Correlogram Museum](https://ccrma.stanford.edu/~malcolm/correlograms/index.html?40%20Masking%20Spectral%20And%20Virtual%20Pitch.html)`)
+   
+Virtual pitch demonstrations (from ASA demonstration CD): 
+Spectral and virtual pitch: you will hear the tune of Westminster chimes presented in virtual pitch, due to the configuration of spectral components harmonically related to the missing fundamental. The spectral and virtual pitches will each be masked in the second and third clips. The video features _autocorrelograms_ of the auditory signal (see below for an explanation).
 
 ## Strike notes and other curiosities
 
@@ -119,9 +119,9 @@ For centuries, hearing and musical scientists have attempted to build an optimal
 
 ## Spectral Models
 
-Spectral models of pitch perception, which are based on the frequency spectrum of sounds, tend to start with the Fourier analysis, which convert sound waves into its frequency components. One of the early spectral or place models was proposed by Helmholtz who speculated that each sinusoidal component of a sound triggers sensation at a place coding for pitch. Thus, the ear is a frequency analyzer: Sounds create "resonances" on the basilar membrane triggering nerve impulses.
+Spectral models of pitch perception, which are based on the frequency spectrum of sounds, tend to start with the Fourier analysis, which convert sound waves into its frequency components. One of the early spectral or place models was proposed by Helmholtz who speculated that each sinusoidal component of a sound triggers sensation at a place coding for pitch. Thus, the ear is a frequency analyzer: Sounds create "resonances" on the basilar membrane triggering nerve impulses. 
 
-{% include img-figure url="/MUTOR/assets/images/unit5_AuditoryFilterbank.png" description="Representations of a harmonic complex tone with a fundamental frequency (F0) of 440 Hz. The upper panel shows the power spectrum. The second panel shows the auditory filterbank, representing the filtering that occurs in the cochlea. The third panel shows the the time-averaged output of the filterbank, or excitation pattern. The fourth panel shows some sample time waveforms at the output of the filterbank, including filters centered at the F0 and the fourth harmonic, illustrating resolved harmonics, and filters centered at the 8th and 12th harmonic of the complex, illustrating harmonics that are less well resolved and show amplitude modulations at a rate corresponding to the F0." width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit5_AuditoryFilterbank.png" description="Representations of a harmonic complex tone with a fundamental frequency (F0) of 440 Hz. The upper panel shows the power spectrum. The second panel shows the auditory filterbank, representing the filtering that occurs in the cochlea. The third panel shows the the time-averaged output of the filterbank, or excitation pattern. The fourth panel shows some sample time waveforms at the output of the filterbank, including filters centered at the F0 and the fourth harmonic, illustrating resolved harmonics, and filters centered at the 8th and 12th harmonic of the complex, illustrating harmonics that are less well resolved and show amplitude modulations at a rate corresponding to the F0." %}
 (Source: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4215732/)
 
 ## Temporal Models and Phase Locking
@@ -138,7 +138,7 @@ Modern theories of pitch perception take into account both spectral and temporal
 
 The autocorrelation models (Licklider, 1959, further developed by Lyon / Slaney and Patterson) use a measure of self-similarity of a waveform in order to derive its fundamental. It is based on the idea that a periodic waveform, when phase-shifted to exactly one period of its fundamental away from a starting point, should correlate perfectly with itself. By comparing the time lag between perfectly correlated frequency components, the model can derive the period of the complex sound, and thus the fundamental frequency. These models give credibility by being capable of explaining typical miscalculations of the auditory system which, by instance, arise when detuning lower partials of a harmomic sound or transposing down sounds consisting of odd partials only.
 
-{% include img-figure url="/MUTOR/assets/images/The-autocorrelogram-A-for-a-200-Hz-fundamental-harmonic-complex-computed-by-taking-the_W640.jpg" description="Autocorrelogram (top) and summary autocorrelogram (bottom)" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/The-autocorrelogram-A-for-a-200-Hz-fundamental-harmonic-complex-computed-by-taking-the_W640.jpg" description="Autocorrelogram (top) and summary autocorrelogram (bottom)" %}
 
 {% include note author="vg" text="the same as in Unit 02 I have commented all the quotes and references so we can decide a format to do it" %}
 {% comment %} Yost, W.A. Pitch perception. Attention, Perception, & Psychophysics 71, 1701–1715 (2009).  {% endcomment %}
@@ -149,25 +149,25 @@ The debate between pattern matching and autocorrelation models have received wid
 
 # Cognitive Models of Pitch
 
-American psychologist Roger Shepard has developed a cognitive psychological model that represents pitch in a helix. In this case, the circular chroma circle (horizontal) can be distinguished from height (vertical). Octaves are always on the same side of the helix. By a clever construction tones can be formed, in which the dimension of the height is eliminated. These sounds, called "Shepard tones", are useful for constructing auditory illusions, e.g. endlessly rising or falling glissandi or scales.
+American psychologist Roger Shepard has developed a cognitive psychological model that represents pitch in a helix. In this case, the circular chroma circle (horizontal) can be distinguished from height (vertical). Octaves are always on the same side of the helix. By a clever construction tones can be formed, in which the dimension of the height is eliminated. These sounds, called "Shepard tones", are useful for constructing auditory illusions, e.g. endlessly rising or falling glissandi or scales. 
 
-{% include img-figure url="/MUTOR/assets/images/helix.jpeg" description="Shepard's pitch helix. A similar model was already created in the mid-1800s." width="350px" %}
+{% include img-figure url="/MUTOR/assets/images/helix.jpeg" description="Shepard's pitch helix. A similar model was already created in the mid-1800s." %}
 
 Taking the importance of fifths into consideration, Shepard extended his model to a double helix.
 
-{% include img-figure url="/MUTOR/assets/images/Helix-Fifths-Relationsship.jpg" description="Shepard's double helix of pitch" width="200px" %}
+{% include img-figure url="/MUTOR/assets/images/Helix-Fifths-Relationsship.jpg" description="Shepard's double helix of pitch" %}
 
 A five-dimensional model projecting the helix onto a torus accounts for third-relationships and the closed circle of fifths.
 
 {% include img-figure url="/MUTOR/assets/images/unit5_chromatorus.png" description="Double Helix winding a torus" %}
 
-Evidence that pitch chroma and pitch height activate different parts of the brain come from Warren et al (2003) {% include note author="vg" text="‘Warren et al‘ should be a quote to our references right?" %} who showed that changes in both chroma and height activate the auditory cortex, but changes in pitch chroma activate regions anterior to the regions activated by pitch height changes.
+Evidence that pitch chroma and pitch height activate different parts of the brain come from Warren et al (2003) {% include note author="vg" text="‘Warren et al‘ should be a quote to our references right?" %} who showed that changes in both chroma and height activate the auditory cortex, but changes in pitch chroma activate regions anterior to the regions activated by pitch height changes. 
 
 Research in gerbils (a small rodent) and humans also found a double-helical structure in the lateral lemniscus (VNLL, a region located in the brainstem) that "might play an important role in peridiocity analysis" (Langner, 2015) and has thus been labeled the _auditory double helix_.
 
 # Intervals
 
-Intervals arise when two pitches are either played in succession or simultaneously.
+Intervals arise when two pitches are either played in succession or simultaneously. 
 The mathematical relationship of an interval created by the frequency ratio of two pitches is given by this formula:
 
 \begin{equation}
@@ -209,7 +209,7 @@ The special significance of the fifth manifests itself in the fact that it appea
 1. Function: tonic - dominant
 1. Key Areas: C major - G major
 
-Heinrich Schenker has developed an analysis method (Schenkerian analysis) demonstrating that nearly every piece of tonal music can be reduced to a simple tonic - dominant - tonic relationship (ursatz).
+Heinrich Schenker has developed an analysis method (Schenkerian analysis) demonstrating that nearly every piece of tonal music can be reduced to a simple tonic - dominant - tonic relationship (ursatz). 
 
 ## Tonnetz
 
@@ -226,7 +226,7 @@ In this method, subjects listen to cadences and scales, with the target sound (t
 
 By analyzing the data, three groups emerged which, depending on their musical background, were more or less able to perceive tonal hierarchies in major or minor context (the figure on the right shows results typical of experienced musicians).
 
-{% include img-figure url="/MUTOR/assets/images/ProbeTone-Method.png" description="Probe Tone Method" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/ProbeTone-Method.png" description="Probe Tone Method" %}
 
 # Key Space
 
@@ -241,7 +241,7 @@ Video showing continuously modulating melody activating the surface of the torus
 
 Interestingly, Arnold Schönberg in his book "Structural Functions of Harmony" devised a chart of key regions which is strikingly similar to the torus unfolded into two dimensions.
 
-{% include img-figure url="/MUTOR/assets/images/chart-of-key-regions.png" description="Schoenberg's Chart of Key Regions" width="500px" %}
+{% include img-figure url="/MUTOR/assets/images/chart-of-key-regions.png" description="Schoenberg's Chart of Key Regions" %}
 
 
 # Applications of Key Space
@@ -266,10 +266,10 @@ With the help of Krumhansl's model, when playing (tonal) music, it is possible t
 # References
 
 - Pressnitzer, D; Patterson, R; & Krumbholtz. (2001). The lower limit of melodic pitch. JASA, 2076-2084.
-- de Cheveigne, A. (2004) Pitch perception models. In Plack, C. and Oxenham. A. (eds) Pitch. New York: Springer Verlag. http://recherche.ircam.fr/equipes/pcm/cheveign/pss/2004_pitch_SHAR.pdf
+- de Cheveigne, A. (2004) Pitch perception models. In Plack, C. and Oxenham. A. (eds) Pitch. New York: Springer Verlag. http://recherche.ircam.fr/equipes/pcm/cheveign/pss/2004_pitch_SHAR.pdf 
 - Krumhansl,  C.L.  (1990). Cognitive foundations  o f musical pitch.  New York:  Oxford University Press.
 - Licklider, J. C. R. (1951). A duplex theory of pitch perception. The Journal of the Acoustical Society of America, 23(1), 147-147.
-- Lin & Hartmann, 1998. http://www.pa.msu.edu/acoustics/template.pdf
+- Lin & Hartmann, 1998. http://www.pa.msu.edu/acoustics/template.pdf 
 - Patterson, R. D., Allerhand, M. H., & Giguere, C. (1995). Time‐domain modeling of peripheral auditory processing: A modular architecture and a software platform. The Journal of the Acoustical Society of America, 98(4), 1890-1894.
 - Schoenberg, A., & Stein, L. (1969). Structural functions of harmony (No. 478). WW Norton & Company.
 - Shepard, R.N. (1982) Geometrical Approximations to the Structure of Musical Pitch. Psychological Review 89(4)
@@ -278,6 +278,6 @@ With the help of Krumhansl's model, when playing (tonal) music, it is possible t
 
 # Links and Downloads
 
--
+- 
 
 {% include unit_postamble.md %}
