--- a/_units/09.md
+++ b/_units/09.md
@@ -1,13 +1,13 @@
 ---
 ###
-# unit information:
+# unit information: 
 # Unit 9: Scale and Harmony
 ###
 title: Scale and Harmony
 number: 9
 short_description: A scale is a set of ascending or descending pitches ordered according to cognitive, theoretical and/or historical principles. They provide the pitch material from which harmonies are built. The theory of harmony is preoccupied with the laws governing the structure, relation, and progression of chords, much of it based on the principle of tension and release. In recent times, composers and theorists have also started to consider elements such as roughness and inharmonicity when constructing sonorities and their progressions.
-summary: In this unit we have learned about scales and harmony. Harmony is a complex notion that refers both to the pleasantness of simultanously sounding notes as well as the logic in which one sonority moves to another within a given framework such as a key area. A scale contains the tones from which sonorities are formed. These tones can be tuned to pitches according to various principles of which just intonation and equal temperament are examples of. The theory and practice of microtonality takes advantage of the fact that scales can be formed from a virtually unlimited number of pitches. In the 20th and 21st centuries, the principles of tension and release have been expanded by taking musical parameters such as roughness and inharmonicity in consideration.
-authors:
+summary: In this unit we have learned about scales and harmony. Harmony is a complex notion that refers both to the pleasantness of simultanously sounding notes as well as the logic in which one sonority moves to another within a given framework such as a key area. A scale contains the tones from which sonorities are formed. These tones can be tuned to pitches according to various principles of which just intonation and equal temperament are examples of. The theory and practice of microtonality takes advantage of the fact that scales can be formed from a virtually unlimited number of pitches. In the 20th and 21st centuries, the principles of tension and release have been expanded by taking musical parameters such as roughness and inharmonicity in consideration. 
+authors: 
  - Georg Hajdu
  - John MacCallum
 topics: [Scale, Harmony, Microtonality, Timbre, Inharmonicity, Roughness]
@@ -31,13 +31,13 @@ mathjax: true
 
 # Introduction
 
-In this unit we will look at scales and harmony from the perspective of perception and cognition of music. In units 4 and 5 we have already learned about consonance and dissonance as well as pitch, intervals and key areas. Harmony is beased on those principles, e.g. we expect chords to have low sensory consonance and we also are keenly aware of when chords don't seem to fit in a passage of music.
+In this unit we will look at scales and harmony from the perspective of perception and cognition of music. In units 4 and 5 we have already learned about consonance and dissonance as well as pitch, intervals and key areas. Harmony is beased on those principles, e.g. we expect chords to have low sensory consonance and we also are keenly aware of when chords don't seem to fit in a passage of music. 
 
 [Webster's dictionary](http://www.m-w.com) defines harmony in reference to music as (1) _the combination of simultaneous musical notes in a chord, (2) the structure of music with respect to the composition and progression of chords or (3) the science of the structure, relation, and progression of chords._ In more general terms, harmony also denotes _the pleasing or congruent arrangement of parts_.
 
 As we can see from the above definition, the word harmony often refers to either a chord, a progression of chords, or a consonant (or generally speaking, pleasing) sonority.  The task of defining harmony is a difficult one — is it a chord or a progression of chords?  How are harmony and harmonic progression different from timbre and timbral evolution?  In this unit, we will discuss these questions and look at how composers in the 20th and 21st centuries view harmony. We will also look at the effects that tuning systems have on harmony.
 
-Scales (derived from Italian _scala_ meaning "staircase") are the collection of pitches, harmonies and melodies are formed from. They usually span the interval of an octave and repeat when going beyond it. The pitch of the individual tones within a scale depends on a variety of factors which have undergone changes throughout history as composers focussed on aspects such as pure sonorities or being able to modulate to distant key areas. It turns out that using 12 pitches per octave is the result of a compromise, but there has been an interest throughout history to consider scales with fewer or many more pitches per octave or other intervals. The deviation from the standard is usually referred to as microtonality.
+Scales (derived from Italian _scala_ meaning "staircase") are the collection of pitches, harmonies and melodies are formed from. They usually span the interval of an octave and repeat when going beyond it. The pitch of the individual tones within a scale depends on a variety of factors which have undergone changes throughout history as composers focussed on aspects such as pure sonorities or being able to modulate to distant key areas. It turns out that using 12 pitches per octave is the result of a compromise, but there has been an interest throughout history to consider scales with fewer or many more pitches per octave or other intervals. The deviation from the standard is usually referred to as microtonality. 
 
 # Historical View of Scale and Harmony
 
@@ -45,7 +45,7 @@ The term harmony comes from a Greek word that translates literally as "means of 
 
 The distinction between harmony and harmonic progression is an important one.  Consider, for example, the C major chord in figure 1.
 
-{% include img-figure url="/MUTOR/assets/images/unit9_cmaj.png" description="C major triad" width="300px" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_cmaj.png" description="C major triad" %}
 
 In the key of C major, this chord has a feeling of stability since it is the tonic of the key.  However, in the key of F major, the same chord will sound less stable as if it should move to F. As we can see, the context in which a chord appears is important. Another example is the famous "Tristan chord"—the opening harmony of Richard Wagner's opera Tristan und Isolde (figure 9.3).  The nature of this sonority has been debated for decades, but the debate centers less around the chord itself, and more around the function and way in which it resolves.
 
@@ -56,7 +56,7 @@ In the key of C major, this chord has a feeling of stability since it is the ton
     <title>The Auditory System</title>
   </head>
   <body>
-    <audio controls src="/MUTOR/assets/audios/unit9_Tristan_Chord.wav">
+    <audio controls src="/MUTOR/assets/audios/unit9_The-Tristan-Chord.mp3">
       Your browser does not support the audio element.
     </audio>
   </body>
@@ -81,7 +81,7 @@ Any tuning system must be measured against just intonation in which intervals ar
 55(\sqrt[12]{2})^7 = 82.4069
 \end{equation}
 
-and in just intonation,
+and in just intonation, 
 
 \begin{equation}
 55\cdot(\frac{3}{2}) = 82.5
@@ -102,9 +102,16 @@ An important technique that defines common practice music is the modulation to d
 
 Listening example 1. The first minute of Capriccio (FbWV 506) by Johann Jakob Froberger played on an organ in meantone temperament.
 
-<div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/EjH8nHOwUxo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit9_froberger-capriccioInCmaj-temp.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
 
 Listening example 2. Froberger's Capriccio played in equal temperament.
 
@@ -121,20 +128,20 @@ Download the following patches which will allow you to explore different tuning 
 
 
 # Period Tunings
-Theorists have created tunings from either deriving them from the overtone series (just-intonation tuning) or stacking fifths (Pythagorean tuning). Stacking four fifths on C leads to an E which is considerably sharper (81/64; 408 cents) than the E contained in the overtone series (5/4; 386 cents). This discrepancy - mathematically represented by the ratio 81/64 * 4/5 = 81/80 = 21.5 cents - is called the Syntonic comma. Since no tuning can exist mathematically where all thirds and fifths are just, musicians have attempted to make up for this by modifying either thirds and/or fifths — an approach referred to as _temperament_.
+Theorists have created tunings from either deriving them from the overtone series (just-intonation tuning) or stacking fifths (Pythagorean tuning). Stacking four fifths on C leads to an E which is considerably sharper (81/64; 408 cents) than the E contained in the overtone series (5/4; 386 cents). This discrepancy - mathematically represented by the ratio 81/64 * 4/5 = 81/80 = 21.5 cents - is called the Syntonic comma. Since no tuning can exist mathematically where all thirds and fifths are just, musicians have attempted to make up for this by modifying either thirds and/or fifths — an approach referred to as _temperament_. 
 
 ## Meantone Temperament
 
-During the Renaissance and Baroques periods meantone temperament was wide-spread: lowering fifths to keep the thirds as just as possible.
+During the Renaissance and Baroques periods meantone temperament was wide-spread: lowering fifths to keep the thirds as just as possible. 
 A number of variants have been in use, e.g. quarter-comma and third-comma meantone temperament. The term quarter-comma, for instance, emphasizes the fact in this temperament the just fifth (3/2 = 701.96 cents) is lowered by an interval corresponding to a fourth of Syntonic comma (21.5 cents / 4 = 5.38 cents): 696.58 cents. Other temperaments suggested by Werckmeister, Valotti and many more are all geared towards allowing modulation to distant key areas while keeping thirds and fifth as pure as possible.
 
-Many of these tunings and temperaments lead to tuning alternatives for a given key. For instance, in just intonation an Ab (8/5; going down by a just major third) is different from a G# (25/16; stacking two just major thirds). Hence, Keyboards such as the archicembalo built in 1588 have  been constructed to represent tuning alternatives.
+Many of these tunings and temperaments lead to tuning alternatives for a given key. For instance, in just intonation an Ab (8/5; going down by a just major third) is different from a G# (25/16; stacking two just major thirds). Hence, Keyboards such as the archicembalo built in 1588 have  been constructed to represent tuning alternatives. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Archicembalo_en_Cents.jpg" description="The Archicembalo had a large number of tuning alternatives for the 12 keys of the chromatic scale." %}
 
 # Equal Temperament
 
-The ultimate compromise has been achieved by introducing 12-tone equal temperament - the tuning of choice in the Classical, Romantic and Modern periods. Here, the discrepancy between 12 just fifts and 7 octaves (Pythagorian comma; 23.46 cents) is _tempered out_ by dividing up the comma evenly (23.46 / 12 = 1.96 cents) and applying this value to all fifths: 701.96 cents - 1.96 cents = 700 cents.
+The ultimate compromise has been achieved by introducing 12-tone equal temperament - the tuning of choice in the Classical, Romantic and Modern periods. Here, the discrepancy between 12 just fifts and 7 octaves (Pythagorian comma; 23.46 cents) is _tempered out_ by dividing up the comma evenly (23.46 / 12 = 1.96 cents) and applying this value to all fifths: 701.96 cents - 1.96 cents = 700 cents. 
 
 By tempering out fifths, the above-mentioned tuning alternatives become _enharmonically equivalent_, e.g. there is no longer a distinction between a G# and Ab. Due to equal temperament, approaches such as dodecaphony (invented by Arnold Schoenberg in 1923) and total serialism were developed, which treat all tones equally and subject them to mathematical set operations.
 
@@ -150,15 +157,15 @@ Via enharmonic equivalence, equal temperament adds another dimension to modulati
     <title>The Auditory System</title>
   </head>
   <body>
-    <audio controls src="/MUTOR/assets/audios/unit9_Der_Neugierige.wav">
+    <audio controls src="/MUTOR/assets/audios/unit9_Der_Neugierige.mp3">
       Your browser does not support the audio element.
     </audio>
   </body>
-</html>
+</html> 
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Ambiguous-Cubes-Illusion.jpg" description="Ambiguous Cubes Illusion" %}
 
-In the dominant seventh chord the dissonant F is resolved by downward motion (inwards) while in the German 6th chord the enharmonically equivalent leading tone E# moves up (outwards). This type of pivoting is comparable to the ambiguous cube illusion (featuring a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards.
+In the dominant seventh chord the dissonant F is resolved by downward motion (inwards) while in the German 6th chord the enharmonically equivalent leading tone E# moves up (outwards). This type of pivoting is comparable to the ambiguous cube illusion (featuring a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
 
 Looking at figure 9.7 for an extended period of time or intermittently, the perspective of the cubes flips as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area, forcing one state over the other. But by skillfully moving into the ambiguous sonority, the music prepares the listener for the flip and leads him/her to realize the other state in a context where the precise timing of the events also matters.
 
@@ -176,25 +183,25 @@ In Just Intonation (JI), we consider the relationships between prime numbers and
 
 In the 1980s, German musicologist Martin Vogel developed an electronic keyboard system, Mutabor, capable of retuning itself on the fly. As chords are thus always in tune, listeners will notice that the roots of the chords are shifting. Obviously, there is a trade-off between the purity of a chord and its stability in the linear, temporal dimension. Whether or not this is acceptable depends on the musical style. Jazz musician Jacob Collier, for instance, uses a similar on-the-fly tuning system developed at MIT which has created a deep interest in the contemporary Classical  and Jazz communities.
 
-## Equal Divisions
+## Equal Divisions 
 ### Divisions of the Whole Tone
 Subdivisions of the whole tone into four (quartertone tuning or 24-tone equal temperament [24TET] also known as equal devision of the octave in 24 steps [24EDO]), five (30TET) and six (36TET) were already theorized upon and practiced at the beginning of the 20th Century by composers such as Busoni, Hába, Wyschnegradsky and Ives. The 72-step "ekmelic" tuning - already used in Byzantine music theory - closely approximates 11-limit JI, while Mexican composer Julian Carrillo had a piano patented in 1940 with a keyboard in 16th notes (96TET) spanning just one octave, with a step size so small that playing a sequence of adjacent notes is perceived as a portamento.
 
 ### Other Divisions of the Octave
-In theory, the octave can be devided into an infinite number of steps. So what makes one scale more interesting than another? Obviously this depends on the style of the music and whether or not the music is meant to be performed on real instruments. One important aspect is how well the scale is capable of representing just intervals, e.g. small integer frequency ratios such as 3/2 or 5/4. Theorists seeking to find temperaments with even better fifths than 12TET have considered 41TET and 53TET. The latter is derived from stacking fifths and tempering out the small _schisma_ between 53 fifths and 31 octaves. It was already known to Chinese scholars in antiquity.
+In theory, the octave can be devided into an infinite number of steps. So what makes one scale more interesting than another? Obviously this depends on the style of the music and whether or not the music is meant to be performed on real instruments. One important aspect is how well the scale is capable of representing just intervals, e.g. small integer frequency ratios such as 3/2 or 5/4. Theorists seeking to find temperaments with even better fifths than 12TET have considered 41TET and 53TET. The latter is derived from stacking fifths and tempering out the small _schisma_ between 53 fifths and 31 octaves. It was already known to Chinese scholars in antiquity. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_fifthstacker.png" description="Calculation of equidistant tunings based on stacking fifths" %}
-Figure 4. Calculation of the 53-tone (and other) equidistant tunings in Max
+Figure 4. Calculation of the 53-tone (and other) equidistant tunings in Max 
 
 {% include note author="vg" text="create online version" %}
 
-In turn, 19TET (approximation of 1/3 comma meantone tuning) and 31TET (approximation of 1/4 comma meantone tuning) feature excellent major thirds and have even been considered by 20th century scholars such as Joseph Yasser and Adriaan Fokker as contenders for the replacement of 12TET.
+In turn, 19TET (approximation of 1/3 comma meantone tuning) and 31TET (approximation of 1/4 comma meantone tuning) feature excellent major thirds and have even been considered by 20th century scholars such as Joseph Yasser and Adriaan Fokker as contenders for the replacement of 12TET. 
 
 In 1980 American composer Easley Blackwood wrote Twelve Microtonal Etudes for Electronic Music Media, the first systematic exploration of equidistant tunings from 13TET to 24TET.
 
 Many tunings such as at 17TET, 19TET, 22TET, 31TET, 41TET and 53TET also feature a __diatonic__ sub set of pitches and therefore be used as alternative tunings for tonal music.  
 
-These temperaments obey the following rule: 5 * m * s + 2 * n * s = 1200, where s is the step size of the temperament, and m and n are integers to be multiplied with s by to yield a diatonic whole tone or a semitone, resp.
+These temperaments obey the following rule: 5 * m * s + 2 * n * s = 1200, where s is the step size of the temperament, and m and n are integers to be multiplied with s by to yield a diatonic whole tone or a semitone, resp. 
 
 The number of steps in the temperament (t) can be calculated by applying this formula: t = 5 * m + 2 * n.
 
@@ -218,15 +225,15 @@ For 41TET: m = 7 and n = 3
 The octave is a particular interval that creates a sense of unity with other other members of the same pitch class. Instead of the octave, other  intervals can be used a frame for a repeating scale structure. Intervals that have been considered are the just fifth (3/2) and the just twelfth (3/1), the latter bearing a close similarity to the octave. Examples are the scales (alpha, beta, gamma and delta) invented by microtonal composer Wendy Carlos and the Bohlen-Pierce scale. In Elektronische Studie II, Karlheinz Stockhausen uses a scale dividing the just 5/1 interval into 25 steps.
 
 #### Bohlen-Pierce Scale
-The Bohlen-Pierce scale, first discovered and described in 1970s by German engineer Heinz Bohlen (and independently re-discovered by John Pierce and Kees van Prooijen) divides the just twelfth into 13 steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (a 3,5,7 pitch lattice). Remarkably, the equal tempered version of the scale matches the JI version more closely than the 5-limit (2,3,5) just and equal tempered versions of the chromatic scale match each other.
+The Bohlen-Pierce scale, first discovered and described in 1970s by German engineer Heinz Bohlen (and independently re-discovered by John Pierce and Kees van Prooijen) divides the just twelfth into 13 steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (a 3,5,7 pitch lattice). Remarkably, the equal tempered version of the scale matches the JI version more closely than the 5-limit (2,3,5) just and equal tempered versions of the chromatic scale match each other. 
 
-{% include img-figure url="/MUTOR/assets/images/unit9_clarinets.png" description="Bohlen-Pierce clarinets in three sizes" width="300px" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_clarinets.png" description="Bohlen-Pierce clarinets in three sizes" %}
 
-Odd integer frequency ratios arise in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? In 2004, the Hamburg University of Music and Drama (HfMT) instigated the Bohlen-Pierce Clarinet project focussing on the design of particular Bohlen-Pierce clarinets in close collaboration with Canadian clarinet maker [Stephen Fox](http://www.sfoxclarinets.com/bpclar.html), with the first clarinet being finished in 2007. In this context, [Müller, Orlandatou and Hajdu](http://georghajdu.de/wp-content/uploads/Starting-over.pdf) have proposed a novel music theory based on the specifics of the scale, including new note names (N - Z), new clefs, a chromatic six-line staff (with no need of accidentals) as well as the establishment of a BP theory of harmony, counterpoint and ear training (see figure 9.10 for different representations of the Bohlen-Pierce scale). MUTOR co-author Psyche Loui, in her Ph.D. work, has asked the question whether or not humans can rapidly learn grammatical structure in a new musical scale. She used the Bohlen-Pierce scale as a point of departure and had, from the perpective of a cognitive psychologist, encouraging results which were in line with the outcomes of the empirical research conducted at the HfMT.
+Odd integer frequency ratios arise in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? In 2004, the Hamburg University of Music and Drama (HfMT) instigated the Bohlen-Pierce Clarinet project focussing on the design of particular Bohlen-Pierce clarinets in close collaboration with Canadian clarinet maker [Stephen Fox](http://www.sfoxclarinets.com/bpclar.html), with the first clarinet being finished in 2007. In this context, [Müller, Orlandatou and Hajdu](http://georghajdu.de/wp-content/uploads/Starting-over.pdf) have proposed a novel music theory based on the specifics of the scale, including new note names (N - Z), new clefs, a chromatic six-line staff (with no need of accidentals) as well as the establishment of a BP theory of harmony, counterpoint and ear training (see figure 9.10 for different representations of the Bohlen-Pierce scale). MUTOR co-author Psyche Loui, in her Ph.D. work, has asked the question whether or not humans can rapidly learn grammatical structure in a new musical scale. She used the Bohlen-Pierce scale as a point of departure and had, from the perpective of a cognitive psychologist, encouraging results which were in line with the outcomes of the empirical research conducted at the HfMT. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_BP-Scale_DifferentViews.png" description="Different representations of the Bohlen-Pierce scale" %}
 
-A CD released by the HfMT in 2020 also contains an arrangement of a piano composition, Vers la flamme, by Alexander Scriabin for Bohlen-Pierce ensemble. Scriabin's harmonic language in his last period focusses on the minor-third circle and tritone relationships as a replacement for Western functional harmony. As the Bohlen-Pierce scale features the consonant tritone (7/5) and minor third (25/21), composed of four or two scale steps, resp., it provides an ideal harmonic framework for such an endeavour.
+A CD released by the HfMT in 2020 also contains an arrangement of a piano composition, Vers la flamme, by Alexander Scriabin for Bohlen-Pierce ensemble. Scriabin's harmonic language in his last period focusses on the minor-third circle and tritone relationships as a replacement for Western functional harmony. As the Bohlen-Pierce scale features the consonant tritone (7/5) and minor third (25/21), composed of four or two scale steps, resp., it provides an ideal harmonic framework for such an endeavour. 
 
 <html>
   <head>
@@ -237,7 +244,7 @@ A CD released by the HfMT in 2020 also contains an arrangement of a piano compos
       Your browser does not support the audio element.
     </audio>
   </body>
-</html>
+</html> 
 
 Listening example ?. Burning Petrol, an arrangement of the piano poem Vers la flamme by Alexander Scriabin for Bohlen-Pierce ensemble.
 
@@ -248,7 +255,7 @@ As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is
 Another classes of tunings cannot be classified into neither group. It includes the Indonesian pelog (used in gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used in traditional gamelan music. According to William Sethares (see below) these instruments are tuned in such way that sonorities formed from the inharmonic sounds of the Gamelan orchestra strive for low sensory dissonance. To smooth out the unpleasantness of the inharmonic sounds is the pair-wise performance of instruments tuned to slightly different pitch which creates vibrato-like beatings. Also note that each Gamelan orchestra has its slightly specific tuning which is due to differences in the manufacturing of the instruments. Therefore, any frequencies given for the pelog scale are either orchestra-specific or abstractions of real tunings.
 (The other scale commonly used in gamelan music, slendro, is characterized by a quasi-equidistant 5-tone scale.)
 
-{% include img-figure url="/MUTOR/assets/images/unit9_Gamelan_Dissonance_Curve.png" description="Dissonance Curve for the pelog scale" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_Gamelan_Dissonance_Curve.png" description="Dissonance Curve for the pelog scale" %}
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Gamelan-Orchestra.png" description="A Gamelan orchestra" %}
 
@@ -261,13 +268,13 @@ In 1998, the American music theorist and professor of electrical engineering Ric
 f_n(stretched) = f_0 S^{(\frac{n}{log(2)})}
 \end{equation}
 
-a candence made of this sound also asks for the scale to be stretched by the same amount. Otherwise, the chords and their progression will sound out of tune. This is due to the lining up of the partials when playing the spectra simultaneously and sequentially.
+a candence made of this sound also asks for the scale to be stretched by the same amount. Otherwise, the chords and their progression will sound out of tune. This is due to the lining up of the partials when playing the spectra simultaneously and sequentially. 
 
 There are four scenarios to be considered:
 1. Neither the spectra nor the scales are stretched: all sounds in tune
 1. The spectra are stretched: the chords will sound dissonant
 1. The scale is stretched: the chord progression sounds out of tune
-1. Both spectra and scale are stretched: the chords and their progression sound smooth.
+1. Both spectra and scale are stretched: the chords and their progression sound smooth. 
 
 Note that depending on the stretch factor, chords may still sound strange and wanting. This is explained by the fact that, due to the brain's ability to infer a virtual fundamental (f<sub>0</sub>), partials forming a harmonic spectrum (and - to lesser degree - tones forming a chord) will cause the sensation of a fundamental even though it may be absent from the spectrum. With stretched spectra, this virtual fundamental may not form a harmonic relationship with the members of the chord, adding to its inharmonicity.
 
@@ -284,11 +291,17 @@ Intervals and chords are often related to the harmonic series. The major triad h
 ## Tension and Release
 
 The progression of harmony from consonance through dissonance and back to consonance can be abstracted and seen as a buildup of tension and a release of that tension.  The serialist composers of the post-war period (Boulez, Stockhausen, etc.) gave up the ability to create tension and release through harmonic progression as they abandoned the sonorities and harmonic syntax of the past.  The generation to follow (Grisey, Murail, Saariaho) sought new ways of creating tension and release without returning to the rules of the past.  In her article Timbre and harmony: interpolations of timbral structures, Kaija Saariao proposes a "sound / noise axis" that could replace the tonal system of consonance / dissonance as a way of creating tension and release.  This is heared clearly in the opening seconds of her composition Nymphea for string quartet and electronics—here, the performers alternate between normal playing and noisy extended techniques such as playing on the bridge (listening example 3).  
-
-
-<div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/PZmzZxZyClA?t=5" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+ 
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit9_saariaho-nymphea-beg.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
 
 Listening example 3. The opening minute of Kaija Saariaho's Nymphea for string quartet and electronics.
 
@@ -299,10 +312,16 @@ In works such as Gérard Grisey's Partiels and Tristan Murail's Gondwana, the co
 
 {% include img-figure url="/MUTOR/assets/images/unit9_partials1-roughness.png" description="The top plot is a sonogram of the first 3'40&quot; of Grisey's Partiels and the bottom plot is roughness against time." %}
 
-<div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/FS0hx9tqsPM?t=62" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit9_Partiels_first-section.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html> 
 Listening example 4. The first 3'40" of Grisey's Partiels.
 
 Although Grisey uses a very different system of harmony in Partiels, one can still see a constant transition between consonance and dissonance or tension and release. About this issue, the composer writes in his own words:
@@ -324,7 +343,7 @@ A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.
 
 [NOTE--THIS IS A SCREENSHOT OF THE HELP PATCH.  A REAL DEMO IS COMING ASAP]
 
-{% include img-figure url="/MUTOR/assets/images/unit9_migrator-ss.png" description="Roughness" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_migrator-ss.png" description="Roughness" %} 
 
 # References
 
@@ -358,7 +377,7 @@ D. Wessel.  Timbre space as a musical control structure.  xenakis.ircam.fr/artic
 
 # Links and Downloads
 
-The max patches for the unit can be downloaded here:  max.zip
+The max patches for the unit can be downloaded here:  max.zip 
 
 Grove Dictionary of Music and Musicians:  http://www.grovemusic.com
 
