--- a/_units/11.md
+++ b/_units/11.md
@@ -39,7 +39,7 @@ Phonology refers to the sounds of speech and language. Abundant evidence suggest
 # Syntax
 Syntax refers to the ordering of entities to form coherent strings. In language, this refers to the order of words and phrases to form sentences. In music, syntax refers to the ordering of pitches, chords, and rhythms to form melodies and harmonies. The nature of the relationship between syntactic structure in language and music, and their underlying neural substrates, is a topic of intense interest to the cognitive and brain sciences community.
 
-The Shared Syntactic Integration Resource Hypothesis (SSIRH, Patel, 2008) is an influential theoretical account of similarities and differences between cognitive processing for music and language. The SSIRH posits that neural resources for music and language overlap at the level of the syntax; in other words, processing of music and language should interact at the syntactic level, but not at other levels such as semantics or acoustic or phonemic structure. Support for the SSIRH comes from a variety of behavioral and neural studies (see Patel, 2008 for a review). One set of findings comes from EEG recordings in humans as they listen to chord progressions that were unexpected given the context, creating a sort of syntax-like violation. These violations in musical structure elicit patterns of brain potentials, specially a negative waveform in the frontal recording sites on the head, around 200 ms after the unexpected chord occurred. This waveform is known as the Early Right Anterior Negativity (ERAN) (Koelsch et al, 2000). The ERAN has been observed in response to many syntactically unexpected musical contexts, even in alternative musical systems such as the Bohlen-Pierce scale (Loui et al, 2009). The ERAN can be elicited even when music is played in the background: directing attention away from the music can reduce but not completely abolish this effect, suggesting that the ERAN is elicited by partially automatic neural sources (Loui et al, 2005).
+The Shared Syntactic Integration Resource Hypothesis (SSIRH, Patel, 2008) is an influential theoretical account of similarities and differences between cognitive processing for music and language. The SSIRH posits that neural resources for music and language overlap at the level of the syntax; in other words, processing of music and language should interact at the syntactic level, but not at other levels such as semantics or acoustic or phonemic structure. Support for the SSIRH comes from a variety of behavioral and neural studies (see Patel, 2008 for a review). One set of findings comes from EEG recordings in humans as they listen to chord progressions that were unexpected given the context, creating a sort of syntax-like violation. These violtaions in musical structure elicit patterns of brain potentials, specially a negative waveform in the frontal recording sites on the head, around 200 ms after the unexpected chord occurred. This waveform is known as the Early Right Anterior Negativity (ERAN) (Koelsch et al, 2000). The ERAN has been observed in response to many syntactically unexpected musical contexts, even in alternative musical systems such as the Bohlen-Pierce scale (Loui et al, 2009). The ERAN can be elicited even when music is played in the background: directing attention away from the music can reduce but not completely abolish this effect, suggesting that the ERAN is elicited by partially automatic neural sources (Loui et al, 2005).
 
 # Semantics
 Semantics refers to the study of meaning. In the study of semantics in language, influential results have come from studies that involve reading sentences with expected words being occasionally replaced by ssemantically unexpected words. Consider this example:
@@ -61,10 +61,7 @@ picture-in-picture" allowfullscreen></iframe>
 
 The rhythmic content of speech can be captured using the normalized Pairwise Variability Index (nPVI): the ratio between successive durations of syllables within (formula given here) 
 
-\begin{equation}
-\mathrm{nPVI} = 100 \left[ \sum_{k=1}^{m-1} \left| \frac{d_k - d_{k+1}}{\frac{1}{2}(d_k + d_{k+1})} \right| \frac{1}{(m-1)} \right]
-\label{eq:nPVI}
-\end{equation}
+{% include img-figure url="/MUTOR/assets/images/unit11_nPVI-formula_Q320.jpg" description="nPVI formula" %} 
 
 As in the examples, the speaker is able to manipulate her speech sound duration, the pattern of duration of different syllables, and the direction of her pitches is effective in conveying nationality or regionality, or where the speaker comes from. 
 
