--- a/_units/10.md
+++ b/_units/10.md
@@ -149,17 +149,17 @@ In the Jones et al (2002) experiment, melodies were played with the last note's 
 
 A diagram of the Jones et al paradigm: 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_jones1.png" description="Jones 1" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_jones1.gif" description="Jones 1" %}
 (image source: Huron, 2006) 
 
 Cartoon of results from Jones et al, showing heightened perceptual accuracy at the expected onset time:
 
-{% include img-figure url="/MUTOR/assets/images/unit10_jones2.gif" description="Jones 2" width="300px" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_jones2.gif" description="Jones 2" %}
 (image source: Huron, 2006)
 
 Rhythmic Expectancy Curve showing optimal perceptual performance when the target note is at the expected downbeat. 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_jones_exp_curve.gif" description="Jones exp curve" width="500px" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_jones_exp_curve.gif" description="Jones exp curve" %}
 (image source: Jones et al, 2002).
 
 A model of rhythmic entrainment 
@@ -201,10 +201,8 @@ Click [here for a demo patch](https://github.com/MUTOR-2/MUTOR/raw/master/assets
 
 Some typical profiles are shown here (see also sections 6 and 7 in Unit 5: Pitch, Intervals and Key Areas):
 
-{% include img-figure url="/MUTOR/assets/images/unit10_probetoneprofiles1.png" description="Probe Tone profiles1" width="500px" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_probetoneprofiles1.png" description="Probe Tone profiles1" %}
 (image source: Krumhansl, 1990)
-
-{% include img-figure url="/MUTOR/assets/images/unit10_probetonemaxpatch.png" description="Probe Tone Max Patch" %}
 
 Notice that when the melodies given to the subjects are in related keys (e.g. C major and a minor scales, as shown in the top panel), the average ratings are highly correlated. In contrast, in response to melodies in unrelated keys such as C major and F# major (bottom panel), the correlations between rating profiles are low, or even negatively correlated. 
 
@@ -221,7 +219,7 @@ To gain a full understanding of musical expectation, it is not enough to only us
 
 In a study using melodies from the Balinese slendro scale (Castellno et al, 1984), Indonesian and Western subjects Results from probe tone profiles obtained from Balinese music were correlated with tones heard in the Balinese slendro scale. For Indonesian subjects with long-term exposure to Balinese music, correlational strengths reflected a sensitivity to the hierarchy of the scale; i.e. tones that fitted the tonal hierarchy were rated as most fitting, whereas atypical tones in the Balinese scale structure were rated as poorly fitting. In contrast, after listening to Balinese melodies, Westerners demonstrated a significant correlation with the occurrence of the Balinese music; that is, Westerners rated anything they had heard in the Balinese music as being well-fitting. 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_balinese_correlations.jpg" description="balinese correlations" width="500px" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_balinese_correlations.jpg" description="balinese correlations" %}
 (image adapted from Huron, 2006) Results from probe tone profiles obtained from North Indian music.
 
 The ethnomusicologist Simha Arom (1991) has investigated rhythm and polyrhythm in Central African music using cognitive principles. His results show that while African music seems to have incredibly complex rhythmic structures, where each member of an ensemble operates at a different metric pattern, these complex polyrhythms could in fact be broken down into simple time ratios such as 2+2+3. These results suggest that expectancy for complex rhythms could also operate on simple cognitive structures. 
@@ -232,8 +230,8 @@ Another commonly used method to investigate musical expectation, which has been 
 
 In the standard reaction time experiment looking at harmonic expectancy (e.g. Bharucha & Stoeckig, 1986; Bigand et al, 1999), participants were presented with chord progressions ending with "target" chords. Some of the target chords were harmonically expected whereas others were harmonically unexpected. Half of the target chords were manipulated so that they were either of tune, or dissonant, or slightly temporally asynchronous (i.e. the notes in the chord started slightly unevenly). Participants' task was to determine whether the target chords were in tune/consonant/temporally synchronous depending on the experiment. Typically, results reveal delayed reaction times and increased error rates for harmonically unexpected target chords. The pattern of results seems similar for musicians and nonmusicians. This methodology is also known as harmonic priming, where the chord progressions prime participants into expecting certain target chords. 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_rt-harm-priming2.png" description="rt-harm-priming2.png" %}
-(image source: Adapted from Bigand et al, 1999)
+{% include img-figure url="/MUTOR/assets/images/unit10_rt-harm-priming2.gif" description="rt-harm-priming2.gif" %}
+(image source: Bigand et al, 1999)
  
 Examples of chord progressions with expected and unexpected endings presented to the participants. 
 
@@ -250,16 +248,16 @@ One commonly used experimental method for infants is the head turn paradigm. The
 
 In the head turn paradigm for musical expectation, the light is usually paired with a speaker which plays different musical sounds. In an experiment using groups of musical tones, Saffran et al (1999) paired groups of three tones together with predictable probabilities. For instance, After hearing a stream of tones with these predictable probabilities between them, infants showed a habituation effect towards groups of tones that had been presented with high transitional probability (also see section 8.3 of Unit 8: Gestalt and Melody), but a dishabituation towards tone groups with low transitional probability. These results suggest that infants could learn to expect more probable tone groups. 
  
-{% include img-figure url="/MUTOR/assets/images/unit10_head_turn_lit.gif" description="head_turn_lit.gif" width="200px" %}
-{% include img-figure url="/MUTOR/assets/images/unit10_head_turn_unlit.gif" description="head_turn_unlit.gif" width="200px" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_head_turn_lit.gif" description="head_turn_lit.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_head_turn_unlit.gif" description="head_turn_unlit.gif" %}
 
 Example of apparatus for the head turn paradigm. Sounds played from speakers are paired with lights which turn on when the sounds are presented. If the sound has been heard many times before, the infant tends not to turn to look at the light. If the sound is novel, the infant tends to look at the light. Thus amount of time spent looking at the light can be used as an approximation to whether an infant can tell the difference between two sets of sounds. 
 
 Saffran's study on statistical learning of musical expectations
-{% include img-figure url="/MUTOR/assets/images/unit10_saffran_tonegroups.png" description="saffran_tonegroups.png" %}
-{% include img-figure url="/MUTOR/assets/images/unit10_saffran_transprob.png" description="saffran_transprob.png" %}
-{% include img-figure url="/MUTOR/assets/images/unit10_saffran_tonestream.png" description="saffran_tonestream.png" %}
-{% include img-figure url="/MUTOR/assets/images/unit10_saffran_testitems.png" description="saffran_testitems.png" width="400px" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_saffran_tonegroups.gif" description="saffran_tonegroups.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_saffran_transprob.gif" description="saffran_transprob.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_saffran_tonestream.gif" description="saffran_tonestream.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_saffran_testitems.gif" description="saffran_testitems.gif" %}
 
 # Statistical Learning
 
@@ -267,7 +265,7 @@ From the head turn paradigm, the probe tone paradigm, and comparative ethnomusic
 
 Statistics in music can be calculated at many levels. At the simplest level, event frequencies of notes constitutes a first-order statistic, where the notes occurring most often tend to be most highly expected. 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_saffran_stats1.png" description="saffran_stats1.png" width="350px"%}
+{% include img-figure url="/MUTOR/assets/images/unit10_stats1.gif" description="saffran_stats1.gif" %}
 
 An illustration of first order statistics. Notice that A occurs most frequently in the above passage, B occurs second most frequently, and C occurrs least frequently. Thus:
 
@@ -275,7 +273,7 @@ Freq(A)>Freq(B)>Freq(C).
 
 On a higher level, statistics can be observed based on second-order statistics, or the transitional probability of one event given its previous event. Consider the following example:
 
-{% include img-figure url="/MUTOR/assets/images/unit10_saffran_stats2.png" description="saffran_stats2.png" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_stats2.gif" description="saffran_stats2.gif" %}
 
 In this passage, D occurs most frequently before E and after C, except for one instance where D occurs after E and before C. Thus, the frequency of CD as a group is higher than the frequency of ED as a group:
 
@@ -289,7 +287,7 @@ By plugging in the formula for transitional probability, we can prove that P(E|D
 
 At an even higher level, we can observe higher-order statistics which may not depend on the events themselves, or the events immediately before or after; instead, higher-order statistics may depend on multiple instances many different events apart. In the following example:
 
-{% include img-figure url="/MUTOR/assets/images/unit10_saffran_stats3.png" description="saffran_stats3.png" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_stats3.gif" description="saffran_stats3.gif" %}
 
 The first note in each group (the low G in this case) is predictive of the first note in the next group, regardless of what notes occur in the rest of each group. These non-adjacent dependencies, where one note depends not on its immediate predecessor but on another note many events before it, are important in creating a sense of implied harmony and are useful in voice leading.
 
@@ -300,8 +298,8 @@ Event-Related brain Potentials (ERPs) are time-locked averages of electrical sig
 
 Event-Related Potentials have been used to investigate expectations for melody and harmony. In Besson & Faita's (1995) experiment investigating melodic expectations, melodies were presented with expected, slightly unexpected, and highly unexpected endings. ERPs showed a positive fluctuation at around 600ms after the onset of the unexpected notes, and the amplitude of this positive fluctuation (termed the Late Positive Component, or LPC) depended on how unexpected the note sounded to the subject. Thus, individuals who were more sensitive to expectations, such as people with musical training, tended to show a stronger effect. 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_besson95stim.png" description="besson95stim.png" %}
- (image source: Adapted from Besson & Faita, 1995)
+{% include img-figure url="/MUTOR/assets/images/unit10_besson95stim.gif" description="besson95stim.gif" %}
+ (image source: Besson & Faita, 1995)
  
 Examples of Besson & Faita's (1995) stimuli. Melodies were presented with expected, slightly unexpected, and highly unexpected endings. 
 
